plugins/org.melanee.ocl2.grammar/src/org/melanee/ocl2/grammar/definition/grammar/DeepOclParser.java
// Generated from grammar/DeepOcl.g4 by ANTLR 4.5.3
package org.melanee.ocl2.grammar.definition.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DeepOclParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, CONTEXT=64, UnaryOperatorCS=65, 
		InvalIDLiteralExpCS=66, NumberLiteralExpCS=67, INT=68, BooleanLiteralExpCS=69, 
		NullLiteralExpCS=70, ID=71, WS=72, ONESPACE=73, STRING=74, UnterminatedStringLiteral=75, 
		COMMENT=76;
	public static final int
		RULE_contextDeclCS = 0, RULE_operationContextCS = 1, RULE_levelSpecificationCS = 2, 
		RULE_bodyCS = 3, RULE_postCS = 4, RULE_preCS = 5, RULE_defCS = 6, RULE_typeExpCS = 7, 
		RULE_typeLiteralCS = 8, RULE_tupleTypeCS = 9, RULE_tuplePartCS = 10, RULE_collectionTypeCS = 11, 
		RULE_collectionTypeIDentifier = 12, RULE_primitiveTypeCS = 13, RULE_typeNameExpCS = 14, 
		RULE_specificationCS = 15, RULE_expCS = 16, RULE_infixedExpCS = 17, RULE_iteratorBarExpCS = 18, 
		RULE_navigationOperatorCS = 19, RULE_prefixedExpCS = 20, RULE_primaryExpCS = 21, 
		RULE_nestedExpCS = 22, RULE_ifExpCS = 23, RULE_letExpCS = 24, RULE_letVariableCS = 25, 
		RULE_typeLiteralExpCS = 26, RULE_collectionLiteralExpCS = 27, RULE_collectionLiteralPartCS = 28, 
		RULE_tupleLiteralExpCS = 29, RULE_tupleLiteralPartCS = 30, RULE_selfExpCS = 31, 
		RULE_primitiveLiteralExpCS = 32, RULE_navigatingExpCS = 33, RULE_navigatingSemiAgrsCS = 34, 
		RULE_navigatingCommaArgCS = 35, RULE_navigatingArgExpCS = 36, RULE_navigatingBarAgrsCS = 37, 
		RULE_navigatingArgCS = 38, RULE_indexExpCS = 39, RULE_nameExpCS = 40, 
		RULE_parameterCS = 41, RULE_invCS = 42, RULE_classifierContextCS = 43, 
		RULE_propertyContextDeclCS = 44, RULE_derCS = 45, RULE_initCS = 46, RULE_onespace = 47;
	public static final String[] ruleNames = {
		"contextDeclCS", "operationContextCS", "levelSpecificationCS", "bodyCS", 
		"postCS", "preCS", "defCS", "typeExpCS", "typeLiteralCS", "tupleTypeCS", 
		"tuplePartCS", "collectionTypeCS", "collectionTypeIDentifier", "primitiveTypeCS", 
		"typeNameExpCS", "specificationCS", "expCS", "infixedExpCS", "iteratorBarExpCS", 
		"navigationOperatorCS", "prefixedExpCS", "primaryExpCS", "nestedExpCS", 
		"ifExpCS", "letExpCS", "letVariableCS", "typeLiteralExpCS", "collectionLiteralExpCS", 
		"collectionLiteralPartCS", "tupleLiteralExpCS", "tupleLiteralPartCS", 
		"selfExpCS", "primitiveLiteralExpCS", "navigatingExpCS", "navigatingSemiAgrsCS", 
		"navigatingCommaArgCS", "navigatingArgExpCS", "navigatingBarAgrsCS", "navigatingArgCS", 
		"indexExpCS", "nameExpCS", "parameterCS", "invCS", "classifierContextCS", 
		"propertyContextDeclCS", "derCS", "initCS", "onespace"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "':'", "'::'", "'('", "','", "')'", "'_'", "'body'", "'post'", "'pre'", 
		"'def'", "'='", "'Tuple'", "'<'", "'>'", "'Collection'", "'Bag'", "'OrderedSet'", 
		"'Sequence'", "'Set'", "'Boolean'", "'Integer'", "'Real'", "'String'", 
		"'ID'", "'UnlimitedNatural'", "'OclAny'", "'OclInvalID'", "'OclVoID'", 
		"'/'", "'*'", "'+'", "'-'", "'<='", "'>='", "'<>'", "'^'", "'and'", "'or'", 
		"'xor'", "'implies'", "'|'", "'.'", "'->'", "'if'", "'then'", "'else'", 
		"'endif'", "'let'", "'in'", "'{'", "'}'", "'..'", "'self'", "'@'", "'\"'", 
		"';'", "'['", "']'", "'$'", "'#'", "'inv'", "'derive'", "'init'", "'context'", 
		null, "'invalid'", null, null, null, "'null'", null, null, "' '"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "CONTEXT", "UnaryOperatorCS", "InvalIDLiteralExpCS", 
		"NumberLiteralExpCS", "INT", "BooleanLiteralExpCS", "NullLiteralExpCS", 
		"ID", "WS", "ONESPACE", "STRING", "UnterminatedStringLiteral", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DeepOcl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DeepOclParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ContextDeclCSContext extends ParserRuleContext {
		public List<PropertyContextDeclCSContext> propertyContextDeclCS() {
			return getRuleContexts(PropertyContextDeclCSContext.class);
		}
		public PropertyContextDeclCSContext propertyContextDeclCS(int i) {
			return getRuleContext(PropertyContextDeclCSContext.class,i);
		}
		public List<ClassifierContextCSContext> classifierContextCS() {
			return getRuleContexts(ClassifierContextCSContext.class);
		}
		public ClassifierContextCSContext classifierContextCS(int i) {
			return getRuleContext(ClassifierContextCSContext.class,i);
		}
		public List<OperationContextCSContext> operationContextCS() {
			return getRuleContexts(OperationContextCSContext.class);
		}
		public OperationContextCSContext operationContextCS(int i) {
			return getRuleContext(OperationContextCSContext.class,i);
		}
		public ContextDeclCSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contextDeclCS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepOclListener ) ((DeepOclListener)listener).enterContextDeclCS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepOclListener ) ((DeepOclListener)listener).exitContextDeclCS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepOclVisitor ) return ((DeepOclVisitor<? extends T>)visitor).visitContextDeclCS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContextDeclCSContext contextDeclCS() throws RecognitionException {
		ContextDeclCSContext _localctx = new ContextDeclCSContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_contextDeclCS);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(99);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(96);
					propertyContextDeclCS();
					}
					break;
				case 2:
					{
					setState(97);
					classifierContextCS();
					}
					break;
				case 3:
					{
					setState(98);
					operationContextCS();
					}
					break;
				}
				}
				setState(101); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CONTEXT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationContextCSContext extends ParserRuleContext {
		public TerminalNode CONTEXT() { return getToken(DeepOclParser.CONTEXT, 0); }
		public List<TerminalNode> ID() { return getTokens(DeepOclParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DeepOclParser.ID, i);
		}
		public LevelSpecificationCSContext levelSpecificationCS() {
			return getRuleContext(LevelSpecificationCSContext.class,0);
		}
		public List<ParameterCSContext> parameterCS() {
			return getRuleContexts(ParameterCSContext.class);
		}
		public ParameterCSContext parameterCS(int i) {
			return getRuleContext(ParameterCSContext.class,i);
		}
		public TypeExpCSContext typeExpCS() {
			return getRuleContext(TypeExpCSContext.class,0);
		}
		public List<PreCSContext> preCS() {
			return getRuleContexts(PreCSContext.class);
		}
		public PreCSContext preCS(int i) {
			return getRuleContext(PreCSContext.class,i);
		}
		public List<PostCSContext> postCS() {
			return getRuleContexts(PostCSContext.class);
		}
		public PostCSContext postCS(int i) {
			return getRuleContext(PostCSContext.class,i);
		}
		public List<BodyCSContext> bodyCS() {
			return getRuleContexts(BodyCSContext.class);
		}
		public BodyCSContext bodyCS(int i) {
			return getRuleContext(BodyCSContext.class,i);
		}
		public OperationContextCSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operationContextCS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepOclListener ) ((DeepOclListener)listener).enterOperationContextCS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepOclListener ) ((DeepOclListener)listener).exitOperationContextCS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepOclVisitor ) return ((DeepOclVisitor<? extends T>)visitor).visitOperationContextCS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperationContextCSContext operationContextCS() throws RecognitionException {
		OperationContextCSContext _localctx = new OperationContextCSContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_operationContextCS);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(CONTEXT);
			setState(105);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(104);
				levelSpecificationCS();
				}
			}

			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(107);
				match(ID);
				setState(108);
				match(T__0);
				}
				break;
			}
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(111);
				match(ID);
				setState(112);
				match(T__1);
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(113);
						match(ID);
						setState(114);
						match(T__1);
						}
						} 
					}
					setState(119);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				setState(120);
				match(ID);
				}
				break;
			case 2:
				{
				setState(121);
				match(ID);
				}
				break;
			}
			setState(124);
			match(T__2);
			setState(133);
			_la = _input.LA(1);
			if (((((_la - 12)) & ~0x3f) == 0 && ((1L << (_la - 12)) & ((1L << (T__11 - 12)) | (1L << (T__14 - 12)) | (1L << (T__15 - 12)) | (1L << (T__16 - 12)) | (1L << (T__17 - 12)) | (1L << (T__18 - 12)) | (1L << (T__19 - 12)) | (1L << (T__20 - 12)) | (1L << (T__21 - 12)) | (1L << (T__22 - 12)) | (1L << (T__23 - 12)) | (1L << (T__24 - 12)) | (1L << (T__25 - 12)) | (1L << (T__26 - 12)) | (1L << (T__27 - 12)) | (1L << (ID - 12)))) != 0)) {
				{
				setState(125);
				parameterCS();
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(126);
					match(T__3);
					setState(127);
					parameterCS();
					}
					}
					setState(132);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(135);
			match(T__4);
			setState(138);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(136);
				match(T__0);
				setState(137);
				typeExpCS();
				}
			}

			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8))) != 0)) {
				{
				setState(143);
				switch (_input.LA(1)) {
				case T__8:
					{
					setState(140);
					preCS();
					}
					break;
				case T__7:
					{
					setState(141);
					postCS();
					}
					break;
				case T__6:
					{
					setState(142);
					bodyCS();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LevelSpecificationCSContext extends ParserRuleContext {
		public List<TerminalNode> NumberLiteralExpCS() { return getTokens(DeepOclParser.NumberLiteralExpCS); }
		public TerminalNode NumberLiteralExpCS(int i) {
			return getToken(DeepOclParser.NumberLiteralExpCS, i);
		}
		public LevelSpecificationCSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_levelSpecificationCS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepOclListener ) ((DeepOclListener)listener).enterLevelSpecificationCS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepOclListener ) ((DeepOclListener)listener).exitLevelSpecificationCS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepOclVisitor ) return ((DeepOclVisitor<? extends T>)visitor).visitLevelSpecificationCS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LevelSpecificationCSContext levelSpecificationCS() throws RecognitionException {
		LevelSpecificationCSContext _localctx = new LevelSpecificationCSContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_levelSpecificationCS);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(T__2);
			setState(149);
			match(NumberLiteralExpCS);
			setState(152);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(150);
				match(T__3);
				setState(151);
				_la = _input.LA(1);
				if ( !(_la==T__5 || _la==NumberLiteralExpCS) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
			}

			setState(154);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyCSContext extends ParserRuleContext {
		public SpecificationCSContext specificationCS() {
			return getRuleContext(SpecificationCSContext.class,0);
		}
		public TerminalNode ID() { return getToken(DeepOclParser.ID, 0); }
		public BodyCSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodyCS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepOclListener ) ((DeepOclListener)listener).enterBodyCS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepOclListener ) ((DeepOclListener)listener).exitBodyCS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepOclVisitor ) return ((DeepOclVisitor<? extends T>)visitor).visitBodyCS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyCSContext bodyCS() throws RecognitionException {
		BodyCSContext _localctx = new BodyCSContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bodyCS);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(T__6);
			setState(158);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(157);
				match(ID);
				}
			}

			setState(160);
			match(T__0);
			setState(161);
			specificationCS();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostCSContext extends ParserRuleContext {
		public SpecificationCSContext specificationCS() {
			return getRuleContext(SpecificationCSContext.class,0);
		}
		public TerminalNode ID() { return getToken(DeepOclParser.ID, 0); }
		public PostCSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postCS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepOclListener ) ((DeepOclListener)listener).enterPostCS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepOclListener ) ((DeepOclListener)listener).exitPostCS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepOclVisitor ) return ((DeepOclVisitor<? extends T>)visitor).visitPostCS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PostCSContext postCS() throws RecognitionException {
		PostCSContext _localctx = new PostCSContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_postCS);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(T__7);
			setState(165);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(164);
				match(ID);
				}
			}

			setState(167);
			match(T__0);
			setState(168);
			specificationCS();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreCSContext extends ParserRuleContext {
		public SpecificationCSContext specificationCS() {
			return getRuleContext(SpecificationCSContext.class,0);
		}
		public TerminalNode ID() { return getToken(DeepOclParser.ID, 0); }
		public PreCSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preCS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepOclListener ) ((DeepOclListener)listener).enterPreCS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepOclListener ) ((DeepOclListener)listener).exitPreCS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepOclVisitor ) return ((DeepOclVisitor<? extends T>)visitor).visitPreCS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreCSContext preCS() throws RecognitionException {
		PreCSContext _localctx = new PreCSContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_preCS);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(T__8);
			setState(172);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(171);
				match(ID);
				}
			}

			setState(174);
			match(T__0);
			setState(175);
			specificationCS();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
